defconfig: use PELT_UTIL_HALFLIFE_12 instead
Signed-off-by: ZyCromerZ <neetroid97@gmail.com>

--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -140,8 +140,10 @@ CONFIG_UCLAMP_MAP_OPP=y
 #
 # FAIR Scheuler tunables
 #
-CONFIG_PELT_UTIL_HALFLIFE_32=y
+# CONFIG_PELT_UTIL_HALFLIFE_32 is not set
 # CONFIG_PELT_UTIL_HALFLIFE_16 is not set
+CONFIG_PELT_UTIL_HALFLIFE_12=y
+# CONFIG_PELT_UTIL_HALFLIFE_10 is not set
 # CONFIG_PELT_UTIL_HALFLIFE_8 is not set
 CONFIG_ARCH_SUPPORTS_NUMA_BALANCING=y
 CONFIG_CGROUPS=y
