--- a/drivers/misc/mediatek/connectivity/bt/mt66xx/connac2/Makefile
+++ b/drivers/misc/mediatek/connectivity/bt/mt66xx/connac2/Makefile
@@ -4,11 +4,7 @@
 ###############################################################################
 # Necessary Check
 
-ifeq ($(AUTOCONF_H),)
-    $(error AUTOCONF_H is not defined)
-endif
-
-ccflags-y += -imacros $(AUTOCONF_H) -DCHIP_IF_BTIF
+ccflags-y += -DCHIP_IF_BTIF
 
 # Force build fail on modpost warning
 KBUILD_MODPOST_FAIL_ON_WARNINGS := y
