defconfig: Performance Improvements

--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -1745,7 +1745,7 @@ CONFIG_MTK_SCHED_INTEROP=y
 #
 # MTK Energy Aware Scheduler Plus
 #
-CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
+#CONFIG_MTK_SCHED_EAS_POWER_SUPPORT is not set
 
 #
 # MTK Heterogenous MultiProcessor Scheduler
@@ -1813,7 +1813,7 @@ CONFIG_MTK_CPU_CTRL_CFP=y
 CONFIG_MTK_PERF_OBSERVER=y
 CONFIG_MTK_RESYM=y
 CONFIG_MTK_FPSGO_V3=y
-CONFIG_MTK_EARA_THERMAL=y
+#CONFIG_MTK_EARA_THERMAL is not set
 # CONFIG_MTK_USB2JTAG_SUPPORT is not set
 CONFIG_NFC_CHIP_PN553=y
 # CONFIG_MTK_CQDMA is not set
@@ -3945,8 +3945,8 @@ CONFIG_STAGING=y
 #
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
-# CONFIG_MTK_GMO_RAM_OPTIMIZE is not set
-# CONFIG_MTK_ENABLE_GMO is not set
+CONFIG_MTK_GMO_RAM_OPTIMIZE=y
+# CONFIG_MTK_ENABLE_GMO=y
 # CONFIG_MTK_ENABLE_AGO is not set
 CONFIG_OPPO_HANS=y
 CONFIG_ION=y
