defconfig : Fix Build Error

--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -3945,7 +3945,7 @@ CONFIG_STAGING=y
 #
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
-CONFIG_MTK_GMO_RAM_OPTIMIZE=y
+#CONFIG_MTK_GMO_RAM_OPTIMIZE=y
 # CONFIG_MTK_ENABLE_GMO=y
 # CONFIG_MTK_ENABLE_AGO is not set
 CONFIG_OPPO_HANS=y
