--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -1813,7 +1813,7 @@ CONFIG_MTK_CPU_CTRL_CFP=y
 CONFIG_MTK_PERF_OBSERVER=y
 CONFIG_MTK_RESYM=y
 CONFIG_MTK_FPSGO_V3=y
-#CONFIG_MTK_EARA_THERMAL is not set
+CONFIG_MTK_EARA_THERMAL=y
 # CONFIG_MTK_USB2JTAG_SUPPORT is not set
 CONFIG_NFC_CHIP_PN553=y
 # CONFIG_MTK_CQDMA is not set
