defconfig : Revert Misc Changes

--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -1812,7 +1812,7 @@ CONFIG_MTK_DEVMPU=y
 CONFIG_MTK_PERFMGR_TOUCH_BOOST=y
 CONFIG_MTK_LOAD_TRACKER=y
 CONFIG_MTK_CPU_CTRL_CFP=y
-#CONFIG_MTK_PERF_OBSERVER=y
+CONFIG_MTK_PERF_OBSERVER=y
 CONFIG_MTK_RESYM=y
 CONFIG_MTK_FPSGO_V3=y
 CONFIG_MTK_EARA_THERMAL=y
@@ -1824,7 +1824,7 @@ CONFIG_NFC_CHIP_PN553=y
 # Performance, Power, and Thermal
 #
 CONFIG_MTK_PERF_TRACKER=n
-#CONFIG_MTK_LOWMEM_HINT=y
+CONFIG_MTK_LOWMEM_HINT=y
 
 #
 # Memory configs
@@ -4860,7 +4860,7 @@ CONFIG_PROBE_EVENTS=y
 # CONFIG_RING_BUFFER_STARTUP_TEST is not set
 # CONFIG_TRACE_EVAL_MAP_FILE is not set
 CONFIG_TRACING_EVENTS_GPIO=y
-#CONFIG_MTK_SCHED_TRACERS=y
+CONFIG_MTK_SCHED_TRACERS=y
 # CONFIG_MTK_FTRACE_DEFAULT_ENABLE is not set
 # CONFIG_MTK_KERNEL_MARKER is not set
 # CONFIG_DMA_API_DEBUG is not set
