vibrator: Fix Missing endif

--- a/drivers/misc/mediatek/vibrator/Makefile
+++ b/drivers/misc/mediatek/vibrator/Makefile
@@ -7,3 +7,4 @@ obj-y += $(subst ",,mt6853)/
 else
 obj-y += $(subst ",,$(CONFIG_MTK_PLATFORM))/
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/vibrator/$(MTK_PLATFORM)
+endif
