--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -595,6 +595,9 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
+CONFIG_KPROFILES=y
+CONFIG_DEFAULT_KP_MODE=2
+CONFIG_AUTO_KPROFILES_NONE=y
 
 #
 # Power management options
