--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -568,7 +568,7 @@ CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="console=tty0 console=ttyMT3,921600n1 root=/dev/ram vmalloc=496M slub_max_order=0 slub_debug=O "
+CONFIG_CMDLINE="root=/dev/ram vmalloc=496M slub_max_order=0 slub_debug=O "
 CONFIG_CMDLINE_FROM_BOOTLOADER=y
 # CONFIG_CMDLINE_EXTEND is not set
 # CONFIG_CMDLINE_FORCE is not set
@@ -1773,10 +1773,10 @@ CONFIG_MTK_AUDIODSP_SUPPORT=y
 # CONFIG_MTK_MUSB_SW_WITCH_MODE is not set
 # CONFIG_MTK_MUSB_PORT0_LOWPOWER_MODE is not set
 CONFIG_MTK_RAM_CONSOLE=y
-CONFIG_MTK_AEE_FEATURE=y
-CONFIG_MTK_AEE_AED=y
-CONFIG_MTK_AEE_IPANIC=y
-CONFIG_MTK_AEE_HANG_DETECT=y
+#CONFIG_MTK_AEE_FEATURE=y
+#CONFIG_MTK_AEE_AED=y
+#CONFIG_MTK_AEE_IPANIC=y
+#CONFIG_MTK_AEE_HANG_DETECT=y
 # CONFIG_MTK_AEE_MRDUMP is not set
 # CONFIG_USBIF_COMPLIANCE is not set
 # CONFIG_USB_MU3D_PIO_ONLY is not set
