RMX2001 : Fix Misc Warnings

--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -32,7 +32,6 @@ CONFIG_NEED_SG_DMA_LENGTH=y
 #CONFIG_OPPO_ROOT_CHECK is not set
 CONFIG_OPPO_EXECVE_BLOCK=y
 CONFIG_OPPO_EXECVE_REPORT=y
->>>>>>> 530f6fb94a66 (RMX2151_defconfig : Disable Some OPPO craps):arch/arm64/configs/RMX2151_defconfig
 CONFIG_SMP=y
 CONFIG_SWIOTLB=y
 CONFIG_IOMMU_HELPER=y
@@ -52,8 +51,8 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-T.H.E-A.Z.R.A.E.L v6.0-BETA // 性能超频"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-T.H.E-A.Z.R.A.E.L v6.0-BETA // 性能超"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
