fpsgo : Import and build fpsgo vendor modules from Xiaomi Redmi Note 8 Pro BSP Open Source Import from Android Q Begonia BSP Sources The Patch based on MTK release: alps-release-q0.mp1.tc8sp-V1.0.1
Co-authored-by: bsp-open <bsp-open@xiaomi.com>

--- a/drivers/misc/mediatek/performance/fpsgo_v3/Makefile
+++ b/drivers/misc/mediatek/performance/fpsgo_v3/Makefile
@@ -26,7 +26,6 @@ obj-y += fpsgo_main.o
 obj-y += base/
 obj-y += composer/
 obj-y += eara_job/
-
 obj-y += fbt/
 obj-y += fstb/
 
@@ -41,4 +40,16 @@ ccflags-y += \
         -I$(EARA_JOB_TOP)/include/ \
         -I$(VIDEOX_TOP)/ \
         -I$(srctree)/drivers/gpu/drm/mediatek/ \
+
+obj-m += fpsgo.o
+fpsgo-y += src/fpsgo_main.o
+
+ifeq (y,$(CONFIG_MTK_FPSGO_V3))
+ifeq (y,$(CONFIG_THUMB2_KERNEL))
+fpsgo-y += src/xgf_v3_ko_thumb2.o
+else
+fpsgo-$(CONFIG_ARM) += src/xgf_v3_ko_arm32.o
+fpsgo-$(CONFIG_ARM64) += src/xgf_v3_ko_arm64.o
+endif
+endif
 
