--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -1571,8 +1571,9 @@ CONFIG_MTK_COMBO_CHIP_CONSYS_6785=y
 # CONFIG_MTK_COMBO_CHIP_CONSYS_6885 is not set
 CONFIG_MTK_COMBO_CHIP="CONSYS_6785"
 CONFIG_MTK_COMBO_PLAT_PATH=""
+CONFIG_WLAN_DRV_BUILD_IN=y
 # CONFIG_MTK_COMBO_COMM is not set
-# CONFIG_MTK_COMBO_BT is not set
+CONFIG_MTK_COMBO_BT=y
 # CONFIG_MTK_COMBO_ANT is not set
 CONFIG_MTK_COMBO_GPS=y
 CONFIG_MTK_COMBO_WIFI=y
@@ -1590,7 +1591,7 @@ CONFIG_MTK_FM_CHIP="MT6631_FM"
 CONFIG_MTK_FM_50KHZ_SUPPORT=y
 # CONFIG_MTK_MERGE_INTERFACE_SUPPORT is not set
 # CONFIG_MTK_CONN_MT3337_CHIP_SUPPORT is not set
-CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
+# CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH is not set
 CONFIG_MTK_CCCI_DEVICES=y
 CONFIG_MTK_MD1_SUPPORT=9
 CONFIG_MTK_MD3_SUPPORT=0
