defconfig: Enable bluetooth config

--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -1571,6 +1571,7 @@ CONFIG_MTK_COMBO_CHIP_CONSYS_6785=y
 # CONFIG_MTK_COMBO_CHIP_CONSYS_6885 is not set
 CONFIG_MTK_COMBO_CHIP="CONSYS_6785"
 CONFIG_MTK_COMBO_PLAT_PATH=""
+CONFIG_BT=y
 CONFIG_WLAN_DRV_BUILD_IN=y
 # CONFIG_MTK_COMBO_COMM is not set
 CONFIG_MTK_COMBO_BT=y
