--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -32,11 +32,14 @@ CONFIG_NEED_SG_DMA_LENGTH=y
 #CONFIG_OPPO_ROOT_CHECK is not set
 CONFIG_OPPO_EXECVE_BLOCK=y
 CONFIG_OPPO_EXECVE_REPORT=y
->>>>>>> 530f6fb94a66 (RMX2151_defconfig : Disable Some OPPO craps):arch/arm64/configs/RMX2151_defconfig
 CONFIG_SMP=y
 CONFIG_SWIOTLB=y
 CONFIG_IOMMU_HELPER=y
 CONFIG_KERNEL_MODE_NEON=y
+CONFIG_KPROBES=y
+CONFIG_HAVE_KPROBES=y
+CONFIG_KPROBE_EVENTS=y
+CONFIG_KSU=y
 CONFIG_FIX_EARLYCON_MEM=y
 CONFIG_PGTABLE_LEVELS=3
 CONFIG_ARCH_SUPPORTS_UPROBES=y
