--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -28,18 +28,10 @@ CONFIG_HAVE_GENERIC_GUP=y
 CONFIG_ARCH_DMA_ADDR_T_64BIT=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_NEED_SG_DMA_LENGTH=y
-#CONFIG_OPPO_KEVENT_UPLOAD is not set
-#CONFIG_OPPO_ROOT_CHECK is not set
-CONFIG_OPPO_EXECVE_BLOCK=y
-CONFIG_OPPO_EXECVE_REPORT=y
 CONFIG_SMP=y
 CONFIG_SWIOTLB=y
 CONFIG_IOMMU_HELPER=y
 CONFIG_KERNEL_MODE_NEON=y
-CONFIG_KPROBES=y
-CONFIG_HAVE_KPROBES=y
-CONFIG_KPROBE_EVENTS=y
-CONFIG_KSU=y
 CONFIG_FIX_EARLYCON_MEM=y
 CONFIG_PGTABLE_LEVELS=3
 CONFIG_ARCH_SUPPORTS_UPROBES=y
@@ -155,6 +147,8 @@ CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_MEMCG_SWAP_ENABLED=y
 CONFIG_BLK_CGROUP=y
+# CONFIG_DEBUG_BLK_CGROUP is not set
+CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
@@ -240,7 +234,6 @@ CONFIG_SLUB=y
 CONFIG_SLAB_MERGE_DEFAULT=y
 # CONFIG_SLAB_FREELIST_RANDOM is not set
 # CONFIG_SLAB_FREELIST_HARDENED is not set
-# CONFIG_SYSTEM_DATA_VERIFICATION is not set
 # CONFIG_SLUB_CPU_PARTIAL is not set
 # CONFIG_SYSTEM_DATA_VERIFICATION is not set
 CONFIG_PROFILING=y
@@ -327,7 +320,6 @@ CONFIG_MODULES=y
 CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_MTK_VIDEOX_LINEAGE_LIVEDISPLAY=y
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_MODULE_SIG is not set
@@ -340,6 +332,7 @@ CONFIG_BLK_SCSI_REQUEST=y
 # CONFIG_BLK_DEV_BSGLIB is not set
 # CONFIG_BLK_DEV_INTEGRITY is not set
 # CONFIG_BLK_DEV_ZONED is not set
+# CONFIG_BLK_DEV_THROTTLING is not set
 # CONFIG_BLK_CMDLINE_PARSER is not set
 # CONFIG_BLK_WBT is not set
 CONFIG_BLK_DEBUG_FS=y
@@ -359,6 +352,7 @@ CONFIG_BLOCK_COMPAT=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+# CONFIG_CFQ_GROUP_IOSCHED is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
@@ -478,10 +472,10 @@ CONFIG_HOLES_IN_ZONE=y
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
 # CONFIG_HZ_100 is not set
-# CONFIG_HZ_250=y
+# CONFIG_HZ_250 is not set
 CONFIG_HZ_300=y
 # CONFIG_HZ_1000 is not set
-CONFIG_HZ=250
+CONFIG_HZ=300
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
@@ -601,9 +595,7 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
-CONFIG_KPROFILES=y
-CONFIG_DEFAULT_KP_MODE=2
-CONFIG_AUTO_KPROFILES_NONE=y
+
 #
 # Power management options
 #
@@ -1131,7 +1123,27 @@ CONFIG_NET_FLOW_LIMIT=y
 # CONFIG_NET_DROP_MONITOR is not set
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
-# CONFIG_BT is not set
+CONFIG_BT=y
+CONFIG_BT_BREDR=y
+# CONFIG_BT_RFCOMM is not set
+# CONFIG_BT_BNEP is not set
+# CONFIG_BT_HIDP is not set
+CONFIG_BT_HS=y
+CONFIG_BT_LE=y
+# CONFIG_BT_LEDS is not set
+# CONFIG_BT_SELFTEST is not set
+CONFIG_BT_DEBUGFS=y
+
+#
+# Bluetooth device drivers
+#
+# CONFIG_BT_HCIBTUSB is not set
+# CONFIG_BT_HCIBTSDIO is not set
+# CONFIG_BT_HCIUART is not set
+# CONFIG_BT_HCIBCM203X is not set
+# CONFIG_BT_HCIBFUSB is not set
+# CONFIG_BT_HCIVHCI is not set
+# CONFIG_BT_MRVL is not set
 # CONFIG_AF_RXRPC is not set
 # CONFIG_AF_KCM is not set
 # CONFIG_STREAM_PARSER is not set
@@ -1326,6 +1338,11 @@ CONFIG_GET_BOARD_ID=y
 #
 # VOP Driver
 #
+CONFIG_KPROFILES=y
+CONFIG_DEFAULT_KP_MODE=2
+# CONFIG_AUTO_KPROFILES_MI_DRM is not set
+# CONFIG_AUTO_KPROFILES_FB is not set
+CONFIG_AUTO_KPROFILES_NONE=y
 # CONFIG_ECHO is not set
 # CONFIG_CXL_BASE is not set
 # CONFIG_CXL_AFU_DRIVER_OPS is not set
@@ -1440,6 +1457,7 @@ CONFIG_CUSTOM_KERNEL_LCM="nt36672c_fhdp_dsi_vdo_tianma_zal1878 nt36672c_fhdp_dsi
 # CONFIG_MTK_LCM_DEVICE_TREE_SUPPORT is not set
 CONFIG_MTK_FB=y
 # CONFIG_MTK_VIDEOX is not set
+CONFIG_MTK_VIDEOX_LINEAGE_LIVEDISPLAY=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
 # CONFIG_MTK_LCM_PHYSICAL_ROTATION_HW is not set
 # CONFIG_MTK_ROUND_CORNER_SUPPORT is not set
@@ -1574,11 +1592,10 @@ CONFIG_MTK_COMBO_CHIP_CONSYS_6785=y
 # CONFIG_MTK_COMBO_CHIP_CONSYS_6885 is not set
 CONFIG_MTK_COMBO_CHIP="CONSYS_6785"
 CONFIG_MTK_COMBO_PLAT_PATH=""
-CONFIG_BT=y
-# CONFIG_WLAN_DRV_BUILD_IN is not set
 # CONFIG_MTK_COMBO_COMM is not set
 CONFIG_MTK_COMBO_BT=y
 # CONFIG_MTK_COMBO_ANT is not set
+# CONFIG_MTK_COMBO_BT_HCI is not set
 CONFIG_MTK_COMBO_GPS=y
 CONFIG_MTK_COMBO_WIFI=y
 # CONFIG_MTK_PASSPOINT_R1_SUPPORT is not set
@@ -1596,6 +1613,7 @@ CONFIG_MTK_FM_50KHZ_SUPPORT=y
 # CONFIG_MTK_MERGE_INTERFACE_SUPPORT is not set
 # CONFIG_MTK_CONN_MT3337_CHIP_SUPPORT is not set
 # CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH is not set
+# CONFIG_WLAN_DRV_BUILD_IN is not set
 CONFIG_MTK_CCCI_DEVICES=y
 CONFIG_MTK_MD1_SUPPORT=9
 CONFIG_MTK_MD3_SUPPORT=0
@@ -1732,7 +1750,6 @@ CONFIG_LIGHTNESS_MAPPING_VALUE=255
 # CONFIG_BACKLIGHT_SUPPORT_LM3697 is not set
 # CONFIG_MTK_IRTX_PWM_SUPPORT is not set
 CONFIG_MTK_PWM=y
-CONFIG_MTK_SYSTRACKER_DISABLE=y
 CONFIG_MTK_SYSTRACKER_V2=y
 CONFIG_MTK_BOOT=y
 CONFIG_MTK_BOOT_REASON=y
@@ -2716,7 +2733,7 @@ CONFIG_THERMAL_DEFAULT_GOV_STEP_WISE=y
 # CONFIG_THERMAL_DEFAULT_GOV_USER_SPACE is not set
 # CONFIG_THERMAL_DEFAULT_GOV_POWER_ALLOCATOR is not set
 # CONFIG_THERMAL_BACKWARD_COMPATIBLE is not set
-# CONFIG_THERMAL_GOV_FAIR_SHARE is not set 
+# CONFIG_THERMAL_GOV_FAIR_SHARE is not set
 CONFIG_THERMAL_GOV_STEP_WISE=y
 # CONFIG_THERMAL_GOV_BANG_BANG is not set
 # CONFIG_THERMAL_GOV_USER_SPACE is not set
@@ -4493,6 +4510,12 @@ CONFIG_NVMEM=y
 # CONFIG_TEE is not set
 
 #
+# KernelSU
+#
+CONFIG_KSU=y
+# CONFIG_KSU_DEBUG is not set
+
+#
 # Firmware Drivers
 #
 CONFIG_ARM_PSCI_FW=y
@@ -4989,10 +5012,11 @@ CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_RNG_DEFAULT=y
 CONFIG_CRYPTO_AKCIPHER2=y
 CONFIG_CRYPTO_KPP2=y
+CONFIG_CRYPTO_KPP=y
 CONFIG_CRYPTO_ACOMP2=y
 # CONFIG_CRYPTO_RSA is not set
 # CONFIG_CRYPTO_DH is not set
-# CONFIG_CRYPTO_ECDH is not set
+CONFIG_CRYPTO_ECDH=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
 # CONFIG_CRYPTO_USER is not set
