--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -1831,10 +1831,10 @@ CONFIG_USB_POWER_DELIVERY=y
 CONFIG_USB_PD_VBUS_STABLE_TOUT=125
 CONFIG_PD_DBG_INFO=y
 CONFIG_MTK_DEVMPU=y
-# CONFIG_MTK_PERFMGR_TOUCH_BOOST is not set
-CONFIG_MTK_LOAD_TRACKER=y
+CONFIG_MTK_PERFMGR_TOUCH_BOOST=y
+CONFIG_MTK_LOAD_TRACKER=n
 CONFIG_MTK_CPU_CTRL_CFP=y
-CONFIG_MTK_PERF_OBSERVER=y
+CONFIG_MTK_PERF_OBSERVER=n
 CONFIG_MTK_RESYM=y
 CONFIG_MTK_FPSGO_V3=y
 CONFIG_MTK_EARA_THERMAL=y
@@ -1845,7 +1845,7 @@ CONFIG_NFC_CHIP_PN553=y
 #
 # Performance, Power, and Thermal
 #
-CONFIG_MTK_PERF_TRACKER=y
+CONFIG_MTK_PERF_TRACKER=n
 CONFIG_MTK_LOWMEM_HINT=y
 
 #
@@ -1928,7 +1928,7 @@ CONFIG_LOG_TOO_MUCH_WARNING=y
 CONFIG_LOG_TOO_MUCH_DETECT_COUNT=0xC8
 CONFIG_LOG_TOO_MUCH_DETECT_GAP=1
 CONFIG_CONSOLE_LOCK_DURATION_DETECT=y
-CONFIG_MTK_MLOG=y
+CONFIG_MTK_MLOG=n
 # CONFIG_MTK_TINYSYS_MCUPM_SUPPORT is not set
 # CONFIG_MTK_TINYSYS_MCUPM_PLT_SUPPORT is not set
 # CONFIG_MTK_SMARTPA_SOUND is not set
