--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -32,7 +32,6 @@ CONFIG_NEED_SG_DMA_LENGTH=y
 #CONFIG_OPPO_ROOT_CHECK is not set
 CONFIG_OPPO_EXECVE_BLOCK=y
 CONFIG_OPPO_EXECVE_REPORT=y
->>>>>>> 530f6fb94a66 (RMX2151_defconfig : Disable Some OPPO craps):arch/arm64/configs/RMX2151_defconfig
 CONFIG_SMP=y
 CONFIG_SWIOTLB=y
 CONFIG_IOMMU_HELPER=y
@@ -52,7 +51,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-T.H.E-A.Z.R.A.E.L v6.0-BETA // 性能超频"
+CONFIG_LOCALVERSION="-T.H.E-A.Z.R.A.E.L v8.0-ALPHA"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -104,7 +103,7 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 # CONFIG_IRQ_TIME_ACCOUNTING is not set
-# CONFIG_SCHED_WALT is not set
+CONFIG_SCHED_WALT=y
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
@@ -1804,7 +1803,8 @@ CONFIG_USB_POWER_DELIVERY=y
 CONFIG_USB_PD_VBUS_STABLE_TOUT=125
 CONFIG_PD_DBG_INFO=y
 CONFIG_MTK_DEVMPU=y
-# CONFIG_MTK_PERFMGR_TOUCH_BOOST is not set
+CONFIG_MTK_PERFMGR_TOUCH_BOOST=y
+CONFIG_MTK_TC10_FEATURE=y
 CONFIG_MTK_LOAD_TRACKER=y
 CONFIG_MTK_CPU_CTRL_CFP=y
 CONFIG_MTK_PERF_OBSERVER=y
@@ -1818,7 +1818,7 @@ CONFIG_NFC_CHIP_PN553=y
 #
 # Performance, Power, and Thermal
 #
-CONFIG_MTK_PERF_TRACKER=y
+# CONFIG_MTK_PERF_TRACKER is not set
 CONFIG_MTK_LOWMEM_HINT=y
 
 #
@@ -1902,7 +1902,7 @@ CONFIG_LOG_TOO_MUCH_WARNING=y
 CONFIG_LOG_TOO_MUCH_DETECT_COUNT=0xC8
 CONFIG_LOG_TOO_MUCH_DETECT_GAP=1
 CONFIG_CONSOLE_LOCK_DURATION_DETECT=y
-CONFIG_MTK_MLOG=y
+# CONFIG_MTK_MLOG is not set
 # CONFIG_MTK_TINYSYS_MCUPM_SUPPORT is not set
 # CONFIG_MTK_TINYSYS_MCUPM_PLT_SUPPORT is not set
 # CONFIG_MTK_SMARTPA_SOUND is not set
