Revert "mediatek/vibrator: Introduce ThunderQuake Engine"
This reverts commit 8b657df947e5da463adf187d1b6847fe09cdf301.

--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -103,7 +103,7 @@ CONFIG_HIGH_RES_TIMERS=y
 CONFIG_TICK_CPU_ACCOUNTING=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 # CONFIG_IRQ_TIME_ACCOUNTING is not set
-CONFIG_SCHED_WALT=y
+# CONFIG_SCHED_WALT is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
 CONFIG_TASKSTATS=y
 # CONFIG_TASK_DELAY_ACCT is not set
@@ -1863,7 +1863,6 @@ CONFIG_MTK_GPU_COMMON_DVFS_SUPPORT=y
 # CONFIG_MTK_GPU_SPM_DVFS_SUPPORT is not set
 # CONFIG_MTK_GPU_SWPM_SUPPORT is not set
 CONFIG_MTK_VIBRATOR=y
-CONFIG_THUNDERQUAKE_ENGINE_GPL=y
 CONFIG_MTK_DFD_INTERNAL_DUMP=y
 
 #
