RMX2001 : Regen defconfig with latest changes

--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -13,8 +13,6 @@ CONFIG_ARCH_MMAP_RND_BITS_MAX=24
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
 CONFIG_NO_IOPORT_MAP=y
-CONFIG_KPROFILES=y
-CONFIG_AUTO_KPROFILES_FB=n
 CONFIG_STACKTRACE_SUPPORT=y
 CONFIG_ILLEGAL_POINTER_VALUE=0xdead000000000000
 CONFIG_LOCKDEP_SUPPORT=y
@@ -50,7 +48,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Azrael-1.8-OC"
+CONFIG_LOCALVERSION="-Azrael-v4-REBORN"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -151,9 +149,10 @@ CONFIG_PAGE_COUNTER=y
 CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_MEMCG_SWAP_ENABLED=y
-# CONFIG_BLK_CGROUP is not set
+CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
+# CONFIG_CFS_BANDWIDTH is not set
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_UCLAMP_TASK_GROUP=y
 # CONFIG_CGROUP_PIDS is not set
@@ -435,6 +434,7 @@ CONFIG_ODM_HQ_EDIT=y
 
 #
 # ARM errata workarounds via the alternatives framework
+#
 # CONFIG_ARM64_ERRATUM_826319 is not set
 # CONFIG_ARM64_ERRATUM_827319 is not set
 # CONFIG_ARM64_ERRATUM_824069 is not set
@@ -451,7 +451,6 @@ CONFIG_ARM64_ERRATUM_1024718=y
 # CONFIG_QCOM_FALKOR_ERRATUM_1009 is not set
 # CONFIG_QCOM_QDF2400_ERRATUM_0065 is not set
 # CONFIG_QCOM_FALKOR_ERRATUM_E1041 is not set
-
 CONFIG_ARM64_4K_PAGES=y
 # CONFIG_ARM64_16K_PAGES is not set
 # CONFIG_ARM64_64K_PAGES is not set
@@ -462,6 +461,8 @@ CONFIG_ARM64_VA_BITS=39
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_NR_CPUS=8
+CONFIG_LITTLE_CPU_MASK=63
+CONFIG_BIG_CPU_MASK=192
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_NUMA is not set
 CONFIG_HOLES_IN_ZONE=y
@@ -470,8 +471,8 @@ CONFIG_HOLES_IN_ZONE=y
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
 # CONFIG_HZ_100 is not set
-CONFIG_HZ_250=y
-# CONFIG_HZ_300 is not set
+# CONFIG_HZ_250 is not set
+CONFIG_HZ_300=y
 # CONFIG_HZ_1000 is not set
 CONFIG_HZ=250
 CONFIG_SCHED_HRTICK=y
@@ -502,10 +503,6 @@ CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 # CONFIG_BOUNCE is not set
 CONFIG_KSM=y
-CONFIG_UKSM=y
-# CONFIG_UKSM_AUTO_MSM is not set
-CONFIG_UKSM_AUTO_FB=y
-# CONFIG_KSM_LEGACY is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 # CONFIG_MEMORY_FAILURE is not set
@@ -744,16 +741,9 @@ CONFIG_TCP_CONG_HTCP=m
 # CONFIG_TCP_CONG_ILLINOIS is not set
 # CONFIG_TCP_CONG_DCTCP is not set
 # CONFIG_TCP_CONG_CDG is not set
-# CONFIG_TCP_CONG_BBR is not set
-# CONFIG_DEFAULT_CUBIC is not set
-# CONFIG_DEFAULT_RENO is not set
 CONFIG_TCP_CONG_BBR=y
-# CONFIG_DEFAULT_CUBIC is not set
-# CONFIG_DEFAULT_RENO is not set
 # CONFIG_DEFAULT_BIC is not set
 # CONFIG_DEFAULT_CUBIC is not set
-# CONFIG_DEFAULT_HTCP is not set
-# CONFIG_DEFAULT_WESTWOOD is not set
 CONFIG_DEFAULT_BBR=y
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="bbr"
@@ -1253,6 +1243,7 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 #
 # CONFIG_SENSORS_LIS3LV02D is not set
 # CONFIG_AD525X_DPOT is not set
+CONFIG_KPROFILES=y
 # CONFIG_DUMMY_IRQ is not set
 # CONFIG_ICS932S401 is not set
 # CONFIG_ENCLOSURE_SERVICES is not set
@@ -1359,7 +1350,7 @@ CONFIG_MTK_GPT_SCHEME_SUPPORT=y
 # Storage Block Tag
 #
 CONFIG_MTK_BLOCK_TAG=y
-#CONFIG_MTK_IO_BOOST is not set
+# CONFIG_MTK_IO_BOOST is not set
 CONFIG_MTK_PID_MAP=y
 CONFIG_MTK_KEY_HINT=y
 
@@ -1747,7 +1738,7 @@ CONFIG_MTK_SCHED_INTEROP=y
 #
 # MTK Energy Aware Scheduler Plus
 #
-#CONFIG_MTK_SCHED_EAS_POWER_SUPPORT is not set
+# CONFIG_MTK_SCHED_EAS_POWER_SUPPORT is not set
 
 #
 # MTK Heterogenous MultiProcessor Scheduler
@@ -1823,7 +1814,7 @@ CONFIG_NFC_CHIP_PN553=y
 #
 # Performance, Power, and Thermal
 #
-CONFIG_MTK_PERF_TRACKER=n
+# CONFIG_MTK_PERF_TRACKER is not set
 CONFIG_MTK_LOWMEM_HINT=y
 
 #
@@ -2709,14 +2700,14 @@ CONFIG_THERMAL=y
 CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=0
 CONFIG_THERMAL_OF=y
 # CONFIG_THERMAL_WRITABLE_TRIPS is not set
-#CONFIG_THERMAL_DEFAULT_GOV_BACKWARD_COMPATIBLE=y
- CONFIG_THERMAL_DEFAULT_GOV_STEP_WISE=y
+# CONFIG_THERMAL_DEFAULT_GOV_BACKWARD_COMPATIBLE is not set
+CONFIG_THERMAL_DEFAULT_GOV_STEP_WISE=y
 # CONFIG_THERMAL_DEFAULT_GOV_FAIR_SHARE is not set
 # CONFIG_THERMAL_DEFAULT_GOV_USER_SPACE is not set
 # CONFIG_THERMAL_DEFAULT_GOV_POWER_ALLOCATOR is not set
-#CONFIG_THERMAL_BACKWARD_COMPATIBLE is not set
+# CONFIG_THERMAL_BACKWARD_COMPATIBLE is not set
 # CONFIG_THERMAL_GOV_FAIR_SHARE is not set
- CONFIG_THERMAL_GOV_STEP_WISE=y
+CONFIG_THERMAL_GOV_STEP_WISE=y
 # CONFIG_THERMAL_GOV_BANG_BANG is not set
 # CONFIG_THERMAL_GOV_USER_SPACE is not set
 # CONFIG_THERMAL_GOV_POWER_ALLOCATOR is not set
@@ -3947,8 +3938,8 @@ CONFIG_STAGING=y
 #
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
-#CONFIG_MTK_GMO_RAM_OPTIMIZE=y
-# CONFIG_MTK_ENABLE_GMO=y
+# CONFIG_MTK_GMO_RAM_OPTIMIZE is not set
+# CONFIG_MTK_ENABLE_GMO is not set
 # CONFIG_MTK_ENABLE_AGO is not set
 CONFIG_OPPO_HANS=y
 CONFIG_ION=y
