--- a/drivers/input/touchscreen/mediatek/hq_green/hxchipset/Kconfig
+++ b/drivers/input/touchscreen/mediatek/hq_green/hxchipset/Kconfig
@@ -20,7 +20,7 @@ config TOUCHSCREEN_HIMAX_IC_HX83112
 		This enables support for HIMAX CHIPSET of HX83112.
 
 config TOUCHSCREEN_HIMAX_DEBUG
-        bool "HIMAX debug function"
+        tristate "HIMAX debug function"
 		depends on TOUCHSCREEN_HIMAX_COMMON
 		help
 		This enables support for HIMAX debug function.
