--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -1435,7 +1435,7 @@ CONFIG_MTK_THERMAL_PA_VIA_ATCMD=y
 #
 # MultiMedia, Display, Camera
 #
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5kgw1_mipi_raw s5kgm1sp_mipi_raw s5k3p9sp_mipi_raw ov8856_mipi_raw gc2375h_mipi_raw gc02m0_mipi_mono ov02a10_mipi_raw"
+CONFIG_CUSTOM_KERNEL_IMGSENSOR="s5kgw1_mipi_raw s5kgm1sp_mipi_raw s5k3p9sp_mipi_raw ov8856_mipi_raw gc2375h_mipi_raw gc02m0_mipi_mono ov02a10_mipi_raw gc02k0_mipi_raw"
 CONFIG_CUSTOM_KERNEL_CAM_CAL_DRV="BRCB032GWZ_3 GT24c32a cat24c16"
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
 CONFIG_MTK_DRM_KEY_MNG_SUPPORT=y
