--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -72,6 +72,10 @@ CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_IRQ_DOMAIN=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_HANDLE_DOMAIN_IRQ=y
+CONFIG_IRQ_SBALANCE=y
+CONFIG_IRQ_SBALANCE_POLL_MSEC=9000
+CONFIG_IRQ_SBALANCE_THRESH=1024
+CONFIG_SBALANCE_EXCLUDE_CPUS="5,7"
 # CONFIG_IRQ_DOMAIN_DEBUG is not set
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_SPARSE_IRQ=y
