--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -126,7 +126,7 @@ CONFIG_RCU_NEED_SEGCBLIST=y
 CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
-CONFIG_LOG_BUF_SHIFT=19
+CONFIG_LOG_BUF_SHIFT=12
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=12
 CONFIG_PRINTK_SAFE_LOG_BUF_SHIFT=13
 CONFIG_GENERIC_SCHED_CLOCK=y
@@ -570,7 +570,7 @@ CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="console=tty0 console=ttyMT3,921600n1 root=/dev/ram vmalloc=496M slub_max_order=0 slub_debug=O "
+CONFIG_CMDLINE="root=/dev/ram vmalloc=496M slub_max_order=0 slub_debug=O "
 CONFIG_CMDLINE_FROM_BOOTLOADER=y
 # CONFIG_CMDLINE_EXTEND is not set
 # CONFIG_CMDLINE_FORCE is not set
@@ -1135,11 +1135,11 @@ CONFIG_WEXT_PROC=y
 CONFIG_WEXT_PRIV=y
 CONFIG_CFG80211=y
 CONFIG_NL80211_TESTMODE=y
-CONFIG_CFG80211_DEVELOPER_WARNINGS=y
+# CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 # CONFIG_CFG80211_CERTIFICATION_ONUS is not set
 # CONFIG_CFG80211_DEFAULT_PS is not set
 # CONFIG_CFG80211_DEBUGFS is not set
-CONFIG_CFG80211_INTERNAL_REGDB=y
+# CONFIG_CFG80211_INTERNAL_REGDB is not set
 CONFIG_CFG80211_CRDA_SUPPORT=y
 # CONFIG_CFG80211_WEXT is not set
 # CONFIG_LIB80211 is not set
@@ -1722,7 +1722,8 @@ CONFIG_LIGHTNESS_MAPPING_VALUE=255
 # CONFIG_BACKLIGHT_SUPPORT_LM3697 is not set
 # CONFIG_MTK_IRTX_PWM_SUPPORT is not set
 CONFIG_MTK_PWM=y
-CONFIG_MTK_SYSTRACKER_V2=y
+# CONFIG_MTK_SYSTRACKER_V2 is not set
+CONFIG_MTK_SYSTRACKER_DISABLE=y
 CONFIG_MTK_BOOT=y
 CONFIG_MTK_BOOT_REASON=y
 CONFIG_MTK_CHIP=y
@@ -1800,9 +1801,9 @@ CONFIG_USB_PD_VBUS_STABLE_TOUT=125
 CONFIG_PD_DBG_INFO=y
 CONFIG_MTK_DEVMPU=y
 # CONFIG_MTK_PERFMGR_TOUCH_BOOST is not set
-CONFIG_MTK_LOAD_TRACKER=y
+# CONFIG_MTK_LOAD_TRACKER is not set
 CONFIG_MTK_CPU_CTRL_CFP=y
-CONFIG_MTK_PERF_OBSERVER=y
+# CONFIG_MTK_PERF_OBSERVER is not set
 CONFIG_MTK_RESYM=y
 CONFIG_MTK_FPSGO_V3=y
 CONFIG_MTK_EARA_THERMAL=y
@@ -1813,7 +1814,7 @@ CONFIG_NFC_CHIP_PN553=y
 #
 # Performance, Power, and Thermal
 #
-CONFIG_MTK_PERF_TRACKER=y
+# CONFIG_MTK_PERF_TRACKER is not set
 CONFIG_MTK_LOWMEM_HINT=y
 
 #
@@ -1896,7 +1897,7 @@ CONFIG_LOG_TOO_MUCH_WARNING=y
 CONFIG_LOG_TOO_MUCH_DETECT_COUNT=0xC8
 CONFIG_LOG_TOO_MUCH_DETECT_GAP=1
 CONFIG_CONSOLE_LOCK_DURATION_DETECT=y
-CONFIG_MTK_MLOG=y
+# CONFIG_MTK_MLOG not set
 # CONFIG_MTK_TINYSYS_MCUPM_SUPPORT is not set
 # CONFIG_MTK_TINYSYS_MCUPM_PLT_SUPPORT is not set
 # CONFIG_MTK_SMARTPA_SOUND is not set
@@ -3092,10 +3093,10 @@ CONFIG_SND_MAX_CARDS=32
 CONFIG_SND_SUPPORT_OLD_API=y
 CONFIG_SND_PROC_FS=y
 CONFIG_SND_VERBOSE_PROCFS=y
-CONFIG_SND_VERBOSE_PRINTK=y
-CONFIG_SND_DEBUG=y
-CONFIG_SND_DEBUG_VERBOSE=y
-CONFIG_SND_PCM_XRUN_DEBUG=y
+# CONFIG_SND_VERBOSE_PRINTK is not set
+# CONFIG_SND_DEBUG is not set
+# CONFIG_SND_DEBUG_VERBOSE is not set
+# CONFIG_SND_PCM_XRUN_DEBUG is not  is not sett
 CONFIG_SND_SEQUENCER=y
 CONFIG_SND_SEQ_DUMMY=y
 CONFIG_SND_SEQ_HRTIMER_DEFAULT=y
@@ -3110,6 +3111,7 @@ CONFIG_SND_DRIVERS=y
 # CONFIG_SND_MTPAV is not set
 # CONFIG_SND_SERIAL_U16550 is not set
 # CONFIG_SND_MPU401 is not set
+
 
 #
 # HD-Audio
@@ -4692,7 +4694,7 @@ CONFIG_PRINTK_TIME=y
 CONFIG_CONSOLE_LOGLEVEL_DEFAULT=7
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_BOOT_PRINTK_DELAY is not set
-CONFIG_DYNAMIC_DEBUG=y
+# CONFIG_DYNAMIC_DEBUG is not set
 
 #
 # Compile-time checks and compiler options
