--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -66,20 +66,19 @@ CONFIG_HAVE_ARCH_AUDITSYSCALL=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_GENERIC_IRQ_SHOW=y
 CONFIG_GENERIC_IRQ_SHOW_LEVEL=y
-# CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK is not set
 CONFIG_GENERIC_IRQ_MIGRATION=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_IRQ_DOMAIN=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 CONFIG_HANDLE_DOMAIN_IRQ=y
-CONFIG_IRQ_SBALANCE=y
-CONFIG_IRQ_SBALANCE_POLL_MSEC=9000
-CONFIG_IRQ_SBALANCE_THRESH=1024
-CONFIG_SBALANCE_EXCLUDE_CPUS="5,7"
 # CONFIG_IRQ_DOMAIN_DEBUG is not set
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_SPARSE_IRQ=y
 # CONFIG_GENERIC_IRQ_DEBUGFS is not set
+CONFIG_IRQ_SBALANCE=y
+CONFIG_IRQ_SBALANCE_POLL_MSEC=9000
+CONFIG_IRQ_SBALANCE_THRESH=1024
+CONFIG_SBALANCE_EXCLUDE_CPUS="5,7"
 CONFIG_ARCH_CLOCKSOURCE_DATA=y
 CONFIG_CLOCKSOURCE_VALIDATE_LAST_CYCLE=y
 CONFIG_GENERIC_TIME_VSYSCALL=y
@@ -170,6 +169,7 @@ CONFIG_CGROUP_BPF=y
 CONFIG_SOCK_CGROUP_DATA=y
 # CONFIG_CHECKPOINT_RESTORE is not set
 # CONFIG_NAMESPACES is not set
+# CONFIG_SCHED_CASS is not set
 # CONFIG_SCHED_AUTOGROUP is not set
 CONFIG_SCHED_TUNE=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
@@ -323,7 +323,6 @@ CONFIG_MODULES=y
 CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
-CONFIG_MTK_VIDEOX_LINEAGE_LIVEDISPLAY=y
 CONFIG_MODVERSIONS=y
 CONFIG_MODULE_SRCVERSION_ALL=y
 # CONFIG_MODULE_SIG is not set
@@ -464,6 +463,10 @@ CONFIG_ARM64_VA_BITS=39
 CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_NR_CPUS=8
+CONFIG_LITTLE_CPU_MASK=
+CONFIG_BIG_CPU_MASK=
+CONFIG_BIG_CPU_FIRST_MASK=0
+CONFIG_BIG_CPU_SECOND_MASK=0
 CONFIG_HOTPLUG_CPU=y
 # CONFIG_NUMA is not set
 CONFIG_HOLES_IN_ZONE=y
@@ -1432,6 +1435,7 @@ CONFIG_CUSTOM_KERNEL_LCM="nt36672c_fhdp_dsi_vdo_tianma_zal1878 nt36672c_fhdp_dsi
 # CONFIG_MTK_LCM_DEVICE_TREE_SUPPORT is not set
 CONFIG_MTK_FB=y
 # CONFIG_MTK_VIDEOX is not set
+CONFIG_MTK_VIDEOX_LINEAGE_LIVEDISPLAY=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
 # CONFIG_MTK_LCM_PHYSICAL_ROTATION_HW is not set
 # CONFIG_MTK_ROUND_CORNER_SUPPORT is not set
@@ -1722,8 +1726,8 @@ CONFIG_LIGHTNESS_MAPPING_VALUE=255
 # CONFIG_BACKLIGHT_SUPPORT_LM3697 is not set
 # CONFIG_MTK_IRTX_PWM_SUPPORT is not set
 CONFIG_MTK_PWM=y
-# CONFIG_MTK_SYSTRACKER_V2 is not set
 CONFIG_MTK_SYSTRACKER_DISABLE=y
+CONFIG_MTK_SYSTRACKER_V2=y
 CONFIG_MTK_BOOT=y
 CONFIG_MTK_BOOT_REASON=y
 CONFIG_MTK_CHIP=y
@@ -1802,7 +1806,6 @@ CONFIG_PD_DBG_INFO=y
 CONFIG_MTK_DEVMPU=y
 # CONFIG_MTK_PERFMGR_TOUCH_BOOST is not set
 # CONFIG_MTK_LOAD_TRACKER is not set
-CONFIG_MTK_CPU_CTRL_CFP=y
 # CONFIG_MTK_PERF_OBSERVER is not set
 CONFIG_MTK_RESYM=y
 CONFIG_MTK_FPSGO_V3=y
@@ -1897,7 +1900,7 @@ CONFIG_LOG_TOO_MUCH_WARNING=y
 CONFIG_LOG_TOO_MUCH_DETECT_COUNT=0xC8
 CONFIG_LOG_TOO_MUCH_DETECT_GAP=1
 CONFIG_CONSOLE_LOCK_DURATION_DETECT=y
-# CONFIG_MTK_MLOG not set
+CONFIG_MTK_MLOG=y
 # CONFIG_MTK_TINYSYS_MCUPM_SUPPORT is not set
 # CONFIG_MTK_TINYSYS_MCUPM_PLT_SUPPORT is not set
 # CONFIG_MTK_SMARTPA_SOUND is not set
@@ -2706,7 +2709,7 @@ CONFIG_THERMAL_DEFAULT_GOV_STEP_WISE=y
 # CONFIG_THERMAL_DEFAULT_GOV_USER_SPACE is not set
 # CONFIG_THERMAL_DEFAULT_GOV_POWER_ALLOCATOR is not set
 # CONFIG_THERMAL_BACKWARD_COMPATIBLE is not set
-# CONFIG_THERMAL_GOV_FAIR_SHARE is not set 
+# CONFIG_THERMAL_GOV_FAIR_SHARE is not set
 CONFIG_THERMAL_GOV_STEP_WISE=y
 # CONFIG_THERMAL_GOV_BANG_BANG is not set
 # CONFIG_THERMAL_GOV_USER_SPACE is not set
@@ -3095,8 +3098,6 @@ CONFIG_SND_PROC_FS=y
 CONFIG_SND_VERBOSE_PROCFS=y
 # CONFIG_SND_VERBOSE_PRINTK is not set
 # CONFIG_SND_DEBUG is not set
-# CONFIG_SND_DEBUG_VERBOSE is not set
-# CONFIG_SND_PCM_XRUN_DEBUG is not  is not sett
 CONFIG_SND_SEQUENCER=y
 CONFIG_SND_SEQ_DUMMY=y
 CONFIG_SND_SEQ_HRTIMER_DEFAULT=y
@@ -3111,7 +3112,6 @@ CONFIG_SND_DRIVERS=y
 # CONFIG_SND_MTPAV is not set
 # CONFIG_SND_SERIAL_U16550 is not set
 # CONFIG_SND_MPU401 is not set
-
 
 #
 # HD-Audio
