RMX2001: defconfig : Regenerate

--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -1,6 +1,6 @@
-
+#
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.141 Kernel Configuration
+# Linux/arm64 4.14.148 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -150,6 +150,8 @@ CONFIG_MEMCG=y
 CONFIG_MEMCG_SWAP=y
 CONFIG_MEMCG_SWAP_ENABLED=y
 CONFIG_BLK_CGROUP=y
+# CONFIG_DEBUG_BLK_CGROUP is not set
+CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 # CONFIG_CFS_BANDWIDTH is not set
@@ -334,6 +336,7 @@ CONFIG_BLK_SCSI_REQUEST=y
 # CONFIG_BLK_DEV_BSGLIB is not set
 # CONFIG_BLK_DEV_INTEGRITY is not set
 # CONFIG_BLK_DEV_ZONED is not set
+# CONFIG_BLK_DEV_THROTTLING is not set
 # CONFIG_BLK_CMDLINE_PARSER is not set
 # CONFIG_BLK_WBT is not set
 CONFIG_BLK_DEBUG_FS=y
@@ -353,6 +356,7 @@ CONFIG_BLOCK_COMPAT=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+# CONFIG_CFQ_GROUP_IOSCHED is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
@@ -3273,14 +3277,12 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_WM8985 is not set
 # CONFIG_SND_SOC_ZX_AUD96P22 is not set
 # CONFIG_SND_SOC_MT6660 is not set
-# CONFIG_SND_SOC_TFA9874 is not set
 CONFIG_SND_SOC_MT6359=y
 # CONFIG_SND_SOC_NAU8540 is not set
 # CONFIG_SND_SOC_NAU8810 is not set
 # CONFIG_SND_SOC_NAU8824 is not set
 # CONFIG_SND_SOC_TPA6130A2 is not set
 # CONFIG_SND_SOC_RT5509 is not set
-# CONFIG_SND_SOC_ALSACODEC_TFA9890 is not set
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SND_SIMPLE_SCU_CARD is not set
 # CONFIG_SND_AUDIO_GRAPH_CARD is not set
@@ -3947,8 +3949,6 @@ CONFIG_ION=y
 # CONFIG_ION_DUMMY is not set
 CONFIG_MTK_ION=y
 # CONFIG_ION_OF is not set
-# CONFIG_FIQ_DEBUGGER is not set
-# CONFIG_FIQ_WATCHDOG is not set
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_LTE_GDM724X is not set
 # CONFIG_LNET is not set
@@ -4083,7 +4083,6 @@ CONFIG_OPPO_DEVICE_IFNO=y
 # CONFIG_OPPO_HYPNUS is not set
 # CONFIG_OPPO_HEALTHINFO is not set
 # CONFIG_OPPO_SHUTDOWN_DETECT is not set
-# CONFIG_OPPO_PHOENIX is not set
 CONFIG_PM_DEVFREQ=y
 
 #
