--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -339,7 +339,7 @@ CONFIG_BLK_SCSI_REQUEST=y
 # CONFIG_BLK_DEV_THROTTLING is not set
 # CONFIG_BLK_CMDLINE_PARSER is not set
 # CONFIG_BLK_WBT is not set
-CONFIG_BLK_DEBUG_FS=y
+# CONFIG_BLK_DEBUG_FS is not set
 # CONFIG_BLK_SED_OPAL is not set
 
 #
@@ -800,7 +800,7 @@ CONFIG_NETFILTER_INGRESS=y
 CONFIG_NETFILTER_NETLINK=y
 # CONFIG_NETFILTER_NETLINK_ACCT is not set
 CONFIG_NETFILTER_NETLINK_QUEUE=y
-CONFIG_NETFILTER_NETLINK_LOG=y
+# CONFIG_NETFILTER_NETLINK_LOG is not set
 CONFIG_NF_CONNTRACK=y
 # CONFIG_NF_LOG_NETDEV is not set
 CONFIG_NF_CONNTRACK_MARK=y
@@ -866,7 +866,7 @@ CONFIG_NETFILTER_XT_TARGET_IMQ=y
 CONFIG_NETFILTER_XT_TARGET_MARK=y
 CONFIG_NETFILTER_XT_NAT=y
 CONFIG_NETFILTER_XT_TARGET_NETMAP=y
-CONFIG_NETFILTER_XT_TARGET_NFLOG=y
+# CONFIG_NETFILTER_XT_TARGET_NFLOG is not set
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 # CONFIG_NETFILTER_XT_TARGET_NOTRACK is not set
 # CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
@@ -916,7 +916,7 @@ CONFIG_NETFILTER_XT_MATCH_POLICY=y
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
-CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG=y
+# CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG is not set
 # CONFIG_NETFILTER_XT_MATCH_RATEEST is not set
 # CONFIG_NETFILTER_XT_MATCH_REALM is not set
 # CONFIG_NETFILTER_XT_MATCH_RECENT is not set
@@ -1592,7 +1592,7 @@ CONFIG_MTK_FM_CHIP="MT6631_FM"
 CONFIG_MTK_FM_50KHZ_SUPPORT=y
 # CONFIG_MTK_MERGE_INTERFACE_SUPPORT is not set
 # CONFIG_MTK_CONN_MT3337_CHIP_SUPPORT is not set
-CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
+# CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH is not set
 CONFIG_MTK_CCCI_DEVICES=y
 CONFIG_MTK_MD1_SUPPORT=9
 CONFIG_MTK_MD3_SUPPORT=0
@@ -1669,7 +1669,7 @@ CONFIG_MTK_AUXADC=y
 # CONFIG_AUXADC_NOT_CONTROL_APMIXED_BASE is not set
 CONFIG_MTK_M4U=y
 # CONFIG_MTK_ICE_DEBUG is not set
-CONFIG_MTK_ATF_LOGGER=y
+# CONFIG_MTK_ATF_LOGGER is not set
 CONFIG_MTK_LENS=y
 # CONFIG_MTK_LENS_USE_MODULE is not set
 # CONFIG_MTK_LENS_DUMMYLENS_SUPPORT is not set
@@ -1833,7 +1833,7 @@ CONFIG_MTK_AMMS=y
 #
 # Misc configs
 #
-CONFIG_MTPROF=y
+# CONFIG_MTPROF is not set
 CONFIG_MTK_SCHED_MONITOR=y
 # CONFIG_PREEMPT_MONITOR is not set
 # CONFIG_MTK_SCHED_MON_DEFAULT_ENABLE is not set
@@ -1846,7 +1846,7 @@ CONFIG_MTK_TIMER_TIMESYNC=y
 CONFIG_MTK_ARCHCOUNTER_TIMESYNC=y
 # CONFIG_MTK_ION_CACHE_OPTIMIZATION is not set
 # CONFIG_MTK_CACHE_FLUSH_BY_SF is not set
-CONFIG_MTK_DEBUG_LATCH=y
+# CONFIG_MTK_DEBUG_LATCH is not set
 CONFIG_MTK_PLAT_SRAM_FLAG=y
 CONFIG_MTK_CACHE_PARITY_CHECK=y
 # CONFIG_MTK_L2C_PARITY_CHECK is not set
@@ -1894,16 +1894,16 @@ CONFIG_DEVAPC_MT6785=y
 CONFIG_MTK_VOW_SUPPORT=y
 # CONFIG_MTK_VOW_DUAL_MIC_SUPPORT is not set
 CONFIG_MTK_VOW_2E2K_SUPPORT=y
-CONFIG_MTK_DRAM_LOG_STORE=y
-CONFIG_MTK_DRAM_LOG_STORE_ADDR=0x0011DF00
-CONFIG_MTK_DRAM_LOG_STORE_SIZE=0x100
-CONFIG_PRINTK_MT_PREFIX=y
-CONFIG_MTK_PRINTK_UART_CONSOLE=y
-CONFIG_LOG_TOO_MUCH_WARNING=y
-CONFIG_LOG_TOO_MUCH_DETECT_COUNT=0xC8
-CONFIG_LOG_TOO_MUCH_DETECT_GAP=1
-CONFIG_CONSOLE_LOCK_DURATION_DETECT=y
-CONFIG_MTK_MLOG=y
+# CONFIG_MTK_DRAM_LOG_STORE is not set
+# CONFIG_MTK_DRAM_LOG_STORE_ADDR is not set
+# CONFIG_MTK_DRAM_LOG_STORE_SIZE is not set
+# CONFIG_PRINTK_MT_PREFIX is not set
+# CONFIG_MTK_PRINTK_UART_CONSOLE is not set
+# CONFIG_LOG_TOO_MUCH_WARNING is not set
+# CONFIG_LOG_TOO_MUCH_DETECT_COUNT is not set
+# CONFIG_LOG_TOO_MUCH_DETECT_GAP is not set
+# CONFIG_CONSOLE_LOCK_DURATION_DETECT is not set
+# CONFIG_MTK_MLOG is not set
 # CONFIG_MTK_TINYSYS_MCUPM_SUPPORT is not set
 # CONFIG_MTK_TINYSYS_MCUPM_PLT_SUPPORT is not set
 # CONFIG_MTK_SMARTPA_SOUND is not set
@@ -1951,7 +1951,7 @@ CONFIG_SCSI_UFSHCD_PLATFORM=y
 # CONFIG_SCSI_UFS_DWC_TC_PLATFORM is not set
 # CONFIG_UFSHPB is not set
 CONFIG_MTK_UFS_SUPPORT=y
-CONFIG_MTK_UFS_BLOCK_IO_LOG=y
+# CONFIG_MTK_UFS_BLOCK_IO_LOG is not set
 # CONFIG_SCSI_DEBUG is not set
 # CONFIG_SCSI_LOWLEVEL_PCMCIA is not set
 # CONFIG_SCSI_DH is not set
@@ -3604,7 +3604,7 @@ CONFIG_MMC_BLOCK=y
 CONFIG_MMC_BLOCK_MINORS=32
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
-CONFIG_MMC_BLOCK_IO_LOG=y
+# CONFIG_MMC_BLOCK_IO_LOG is not set
 # CONFIG_MMC_FFU is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
 # CONFIG_MMC_PARANOID_SD_INIT is not set
@@ -4697,7 +4697,7 @@ CONFIG_DYNAMIC_DEBUG=y
 #
 # Compile-time checks and compiler options
 #
-CONFIG_DEBUG_INFO=y
+# CONFIG_DEBUG_INFO is not set
 # CONFIG_DEBUG_INFO_REDUCED is not set
 # CONFIG_DEBUG_INFO_SPLIT is not set
 # CONFIG_DEBUG_INFO_DWARF4 is not set
@@ -4709,7 +4709,7 @@ CONFIG_FRAME_WARN=2800
 # CONFIG_READABLE_ASM is not set
 # CONFIG_UNUSED_SYMBOLS is not set
 # CONFIG_PAGE_OWNER is not set
-CONFIG_DEBUG_FS=y
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 # CONFIG_SECTION_MISMATCH_WARN_ONLY is not set
@@ -4719,7 +4719,7 @@ CONFIG_FRAME_POINTER=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x1
 CONFIG_MAGIC_SYSRQ_SERIAL=y
-CONFIG_DEBUG_KERNEL=y
+# CONFIG_DEBUG_KERNEL is not set
 
 #
 # Memory Debugging
@@ -4758,7 +4758,7 @@ CONFIG_DEATH_HEALER=y
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_ON_OOPS_VALUE=1
 CONFIG_PANIC_TIMEOUT=1
-CONFIG_SCHED_DEBUG=y
+# CONFIG_SCHED_DEBUG is not set
 CONFIG_SCHED_INFO=y
 CONFIG_SCHEDSTATS=y
 # CONFIG_SCHED_STACK_END_CHECK is not set
