defconfig: Enable `MTK_SCHED_SYSHINT`

--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -1756,7 +1756,7 @@ CONFIG_MTK_SCHED_BOOST=y
 CONFIG_MTK_SCHED_RQAVG_KS=y
 CONFIG_MTK_SCHED_RQAVG_US=y
 CONFIG_MTK_SCHED_CPULOAD=y
-# CONFIG_MTK_SCHED_SYSHINT is not set
+CONFIG_MTK_SCHED_SYSHINT=y
 # CONFIG_MTK_RT_THROTTLE_MON is not set
 # CONFIG_MTK_AURISYS_PHONE_CALL_SUPPORT is not set
 CONFIG_MTK_AUDIODSP_SUPPORT=y
