--- a/arch/arm64/configs/RMX2001_defconfig
+++ b/arch/arm64/configs/RMX2001_defconfig
@@ -2523,7 +2523,7 @@ CONFIG_SPI_MT65XX=y
 # CONFIG_SPI_LOOPBACK_TEST is not set
 # CONFIG_SPI_TLE62X0 is not set
 # CONFIG_SPI_SLAVE is not set
-# CONFIG_SPMI is not set
+CONFIG_SPMI=y
 # CONFIG_HSI is not set
 # CONFIG_PPS is not set
 
